--- a/themes/mb-design/templates/partials/base.html.twig
+++ b/themes/mb-design/templates/partials/base.html.twig
@@ -9,14 +9,11 @@
     {% include 'partials/metadata.html.twig' %}
 
     <link rel="icon" type="image/x-icon" href="{{ url('theme://images/assets/mb-icon.ico') }}" rel="Shortcut Icon"/>
-    <link href="img/assets/Apple-Touch-Icon-57x57.png" rel="Apple Touch Icon">
-    <link href="img/assets/Apple-Touch-Icon-144x144.png" rel="Apple Touch Icon">
+    <link href="{{ url('theme://images/assets/Apple-Touch-Icon-57x57.png') }}" rel="Apple Touch Icon">
+    <link href="{{ url('theme://images/assets/Apple-Touch-Icon-144x144.png') }}" rel="Apple Touch Icon">
     <link rel="canonical" href="{{ page.url(true, true) }}" />
 
     {% block stylesheets %}
-        {# do assets.addCss('http://yui.yahooapis.com/pure/0.6.0/pure-min.css', 100) #}
-        {# do assets.addCss('https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css', 99) #}
-        {# do assets.addCss('theme://css/custom.css', 98) #}
         {% do assets.addCss('theme://css/style.css', 100) %}
     {% endblock %}
     {{ assets.css() }}
