--- a/themes/mb-design/templates/partials/th3dcard.html.twig
+++ b/themes/mb-design/templates/partials/th3dcard.html.twig
@@ -2,9 +2,15 @@
 <!DOCTYPE html>
 <html lang="{{ grav.language.getActive ?: theme_config.default_lang }}">
 <head>
+{# get site location #}
+{% set sitelocation = grav.uri.base %}
+
 {% block head %}
     <meta charset="utf-8" />
-
+    {% if sitelocation is same as('https://martinbagshaw.co.uk')%}
+    <!-- google site verification code -->
+    <meta name="google-site-verification" content="Wsaohs6tMaC7wOWnBdismDY9xuKDF08OjH69CFr3XVY" />
+    {% endif %}
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% include 'partials/metadata.html.twig' %}
@@ -32,6 +38,20 @@
 </head>
 <body class="{{ page.header.body_classes }}">
 
+
+{{ dump(page.url) }}
+{# local or test site reminder message #}
+
+{% if sitelocation|contains('localhost') %}
+    <div style="position:absolute;right:0;left:auto;top:14rem;padding:0.5em;background-color:#00a651;">
+        <p class="lg" style="color:#fff;">LOCAL WEBSITE</p>
+    </div>
+{% elseif sitelocation is same as('http://testing.martinbagshaw.co.uk')%}
+    <div style="position:absolute;right:0;left:auto;top:14rem;padding:0.5em;background-color:#fc0;">
+        <p class="lg" style="color:#000;">TESTING WEBSITE</p>
+    </div>
+{% endif %}
+
 {% block body %}
     {% block content %}{% endblock %}
 {% endblock %}
@@ -39,6 +59,19 @@
 {% block bottom %}
     {{ assets.js('bottom') }}
 {% endblock %}
+
+{% if sitelocation is same as('https://martinbagshaw.co.uk')%}
+<!-- google analytics -->
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-38406939-1', 'auto');
+    ga('send', 'pageview');
+</script>
+{% endif %}
 
 </body>
 </html>
