--- a/themes/mb-design/templates/partials/base.html.twig
+++ b/themes/mb-design/templates/partials/base.html.twig
@@ -22,6 +22,12 @@
 
     {% block stylesheets %}
         {% do assets.addCss('theme://css/style.css', 100) %}
+        {% do assets.addCss('https://fonts.googleapis.com/css?family=Signika+Negative:400,600', 99) %}
+        {% do assets.addCss('theme://css/print.css', {'media':'print'}, 98) %}
+        {# no media queries #}
+        {% if browser.getBrowser == 'msie' and browser.getVersion <= 8 %}
+            {% do assets.addCss('theme://css/ie.css', 97) %}
+        {% endif %}
     {% endblock %}
     {{ assets.css() }}
 
